--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .DS_Store
 ._.DS_Store
 .ipynb_checkpoints/
+__pycache__/
+src/__pycache__/elastic_helpers.cpython-36.pyc
+src/__pycache__/config.cpython-36.pyc
+src/__pycache__/data_handler.cpython-36.pyc
+src/__pycache__/loader.cpython-36.pyc
+src/__pycache__/model.cpython-36.pyc
