--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-.DS_Store
-src/._data_handler.py
-._.DS_Store
-.ipynb_checkpoints/
+model_params.json
+*.py[cod]
 __pycache__/
-src/__pycache__/elastic_helpers.cpython-36.pyc
-src/__pycache__/config.cpython-36.pyc
-src/__pycache__/data_handler.cpython-36.pyc
-src/__pycache__/loader.cpython-36.pyc
-src/__pycache__/model.cpython-36.pyc
+.DS_Store
+._*
